Converted to library instead of single file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,22 @@
 cmake_minimum_required(VERSION 2.8)
 
-project( camera )
+project( robocar )
 
 find_package( OpenCV REQUIRED )
 
-add_executable( camera camera.cpp )
+include_directories(
+	${PROJECT_SOURCE_DIR}/include
+)
 
-target_link_libraries( camera ${OpenCV_LIBS} )
+
+set(CAMERA_HEADER_FILES	include/camera.hpp)
+set(CAMERA_SOURCE_FILES	include/camera.cpp)
+add_library(camera ${CAMERA_SOURCE_FILES} ${CAMERA_HEADER_FILES})
+
+add_executable( robocar robocar.cpp )
+target_link_libraries(
+	robocar
+	camera
+)
+
+target_link_libraries( robocar ${OpenCV_LIBS} )
